--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,7 @@ a.tool-link.secondary-color:visited {
 
 img.full-width-banner {
   height: 25vh;
-  width: 99vw;
+  width: 100%;
   object-fit: cover;
 }
 
